switched backend to MongoDB and implemented frontend

--- a/server/package.json
+++ b/server/package.json
@@ -3,20 +3,27 @@
   "version": "1.0.0",
   "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --detectOpenHandles",
     "dev": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "cluster":"pm2 start src/server.js -i max"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "jest": {
+    "testEnvironment": "node"
+  },
   "description": "nasa-mission-control-project-api",
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^5.6.0",
-    "express": "^5.1.0"
+    "express": "^4.18.2",
+    "pm2": "^6.0.6"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
+    "supertest": "^7.1.0"
   }
 }
