--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "client": "cd client && npm start",
     "dev": "start cmd /k \"npm run server\" && start cmd /k \"npm run client\"",
     "deploy": "cd client && npm run build && cd ../server && npm start",
+    "deploy-cluster": "cd client && npm run build && cd ../server && npm run cluster",
     "test": "cd server && npm test && cd ../client && npm test"
   },
   "keywords": [],
@@ -17,6 +18,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "mongoose": "^8.15.0",
     "morgan": "^1.10.0"
   }
 }
