--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "main": "src/server.js",
   "scripts": {
     "test": "jest --detectOpenHandles",
-    "dev": "nodemon src/server.js",
+    "dev": "nodemon --env-file=.env src/server.js",
     "start": "node src/server.js",
-    "cluster":"pm2 start src/server.js -i max"
+    "cluster": "pm2 start src/server.js -i max"
   },
   "keywords": [],
   "author": "",
