--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "powershell -Command \"$env:BUILD_PATH='../server/public'; npm run react-build\"",
+    "build": "BUILD_PATH=../server/public npm run react-build",
     "react-build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
