--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -8,20 +8,27 @@ name: NASA PROJECT CI
       - main
 jobs:
   build:
+    runs-on: ubuntu-latest
     env:
       CI: true
+      MONGO_URL: 'mongodb://localhost/nasa'
     strategy:
       matrix:
         node-version:
           - 14.x
           - 16.x
-    runs-on: ubuntu-latest
+        mongodb-version:
+          - 4.4
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js version '${{ matrix.node-version }}'
+      - name: 'Use Node.js version ${{ matrix.node-version }}'
         uses: actions/setup-node@v2
         with:
           node-version: '${{ matrix.node-version }}'
+      - name: Use MongoDB from GitHub Actions
+        uses: supercharge/mongodb-github-action@1.12.0
+        with:
+          mongodb-version: '${{ matrix.mongodb-version }}'
       - run: npm install
       - run: npm run build --prefix client
       - run: npm run test
